          color:#C0F0C0; 
          font-size:0.8em; 
          margin-bottom:1em; 
          text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
$ 1.1.9
  % Version 1.1.9
  _ 2013-01-20
  ! Orientation &amp; Fuel Map
  	* All kinds of orientation optimizations
  	* Fuel Map spruced up and nearing completion 
$ 1.1.8
  % Version 1.1.8
  _ 2013-01-19
  ! Bug Fix
  	* OTG confirmed as functional
  	* Low Density display optimizations
  	* TODO: Finish fuel table 
  	* Pushed to Master
  	* Honeycomb 3.1+ only
$ 1.1.7
  % Version 1.1.7
  _ 2013-01-12
  ! Bug Fixes &amp; Bulk Logging
  	* Added Bulk Logging option to Preferences
  	* Added "USB Connect" to Context Menu
  	* Fixed AFR Alert Logging bug
  	* Resized Gauges (layout-large) to better fit N7 density
  	* Removed Landscape only display restriction
  	* TODO: Finish fuel table 
  	* Pushed to Master
  	* Honeycomb 3.1+ only
$ 1.1.6
  % Version 1.1.6
  _ 2012-11-12
  ! Minor Tweaks
  	* Moved wake lock acquire to service connect and release to disconnect
  	* Added wake lock option to Preferences
  	* Added auto-connect on Charge state Preference
  	* Added TPS Slider gauge
  	* Fixed Dashboard tab gauge refresh lag
  	* Created a grayscale icon for foreground notifications
  	* Fixed spamming auto-reconnects
	* Disabled debug logging (oops)
  	* Honeycomb 3.1+ only
$ 1.1.5
  % Version 1.1.5
  _ 2012-11-11
  ! Service Release (literally)
  	* Merged to master branch
  	* Honeycomb 3.1+ only
  	* All reception logic moved to a stateful service
  	* Removed fuel map data for now (work in progress)
  	* Fixed a bug where USB logic was overwriting active Sockets
  	* Implemented wake lock when MainActivity visible
  	* Resized the gauges a smidge
  	* TODO: USB support not verified
  	* TODO: Add support for duty cycle and ignition maps
  	* TODO: Add edit capability for maps
$ 1.1.0
  % Version 1.1.0
  _ 2012-10-11