@@ -25,6 +25,7 @@ $ 1.1.9
   ! Orientation &amp; Fuel Map
   	* All kinds of orientation optimizations
   	* Fuel Map spruced up and nearing completion 
+  	* Play Store BackupAgent for Shared Preferences
 $ 1.1.8
   % Version 1.1.8
   _ 2013-01-19
